# PEular

./: .gitignore  .gitmodules  .travis.yml  README.md  problem-1.py  problem-10.py  problem-11.in  problem-11.py  problem-12.py  problem-13.py  problem-14.py  problem-15.py  problem-16.py  problem-17.py  problem-18.py  problem-20.py  problem-21.py  problem-25.py  problem-26.py  problem-30.py  problem-31.py  problem-32.py  problem-34.py  problem-35.py  problem-36.py  problem-40.py  problem-42.py  problem-46.py  problem-47.cpp  problem-48.py  problem-49.cpp  problem-5.py  problem-51.cpp  problem-67.py  problem-7.py  problem-8.in  problem-8.py  problem-9.py  run  run_python
CPP/: .gitmodules  CMakeLists.txt  build.bash  setup-problem-layout.bash
CPP/bench-mark-tests/: BM_PE_0001.cpp  BM_PE_0002.cpp  BM_PE_0003.cpp  BM_PE_0004.cpp  BM_PE_0051.cpp  BM_PE_0052.cpp  BM_PE_0053.cpp  BM_PE_0055.cpp  BM_PE_0056.cpp  BM_PE_0057.cpp  BM_PE_0058.cpp
CPP/src/: 27_07_2019.cpp  PE_0001.cpp  PE_0001.hpp  PE_0002.cpp  PE_0002.hpp  PE_0003.cpp  PE_0003.hpp  PE_0004.cpp  PE_0004.hpp  PE_0051.cpp  PE_0051.hpp  PE_0052.cpp  PE_0052.hpp  PE_0053.cpp  PE_0053.hpp  PE_0055.cpp  PE_0055.hpp  PE_0056.cpp  PE_0056.hpp  PE_0057.cpp  PE_0057.hpp  PE_0058.cpp  PE_0058.hpp
CPP/tests/: TEST_PE_0001.cpp  TEST_PE_0002.cpp  TEST_PE_0003.cpp  TEST_PE_0004.cpp  TEST_PE_0051.cpp  TEST_PE_0052.cpp  TEST_PE_0053.cpp  TEST_PE_0055.cpp  TEST_PE_0056.cpp  TEST_PE_0057.cpp  TEST_PE_0058.cpp
Python/: problem-11.py  problem-12.py  problem-14.py  problem-18.py  problem-19.py  problem-2.py  problem-22.py  (+21 more)
